~resource file refactoring